--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "version": 2,
     "builds": [
-        { "src": "public/index.html", "use": "@vercel/static" },
+        { "src": "static/index.html", "use": "@vercel/static" },
         { "src": "api/**/*.js", "use": "@vercel/node" }
     ],
     "routes": [
